@@ -1,0 +1,23 @@
+package com.robertx22.mine_and_slash.commands.suggestions;
+
+import com.robertx22.mine_and_slash.registry.SlashRegistry;
+
+import java.util.List;
+import java.util.stream.Collectors;
+
+public class WorldTypesSuggestions extends CommandSuggestions {
+
+    @Override
+    public List<String> suggestions() {
+        List<String> collect = SlashRegistry.WorldProviders()
+            .getList()
+            .stream()
+            .map(x -> x.GUID())
+            .collect(Collectors.toList());
+        collect.add("random");
+
+        return collect;
+    }
+
+}
+
