@@ -5,9 +5,9 @@ import com.robertx22.mine_and_slash.database.quests.base.Quest;
 import com.robertx22.mine_and_slash.database.rarities.BaseRaritiesContainer;
 import com.robertx22.mine_and_slash.database.rarities.MapRarity;
 import com.robertx22.mine_and_slash.db_lists.Rarities;
-import com.robertx22.mine_and_slash.db_lists.initializers.WorldProviders;
-import com.robertx22.mine_and_slash.registry.SlashRegistry;
 import com.robertx22.mine_and_slash.items.misc.ItemMap;
+import com.robertx22.mine_and_slash.loot.blueprints.bases.IWPPart;
+import com.robertx22.mine_and_slash.registry.SlashRegistry;
 import com.robertx22.mine_and_slash.saveclasses.gearitem.gear_bases.Rarity;
 import com.robertx22.mine_and_slash.saveclasses.item_classes.MapItemData;
 import com.robertx22.mine_and_slash.saveclasses.mapitem.MapAffixData;
@@ -28,6 +28,8 @@ public class MapBlueprint extends ItemBlueprint {
         this.tier.minTier = 1;
         this.tier.number = worldTier;
     }
+
+    public IWPPart iwp = new IWPPart(this);
 
     public boolean getIsPermaDeath() {
         return RandomUtils.roll(PERMADEATH_CHANCE);
@@ -65,7 +67,9 @@ public class MapBlueprint extends ItemBlueprint {
 
         data.rarity = rarity.Rank();
 
-        Quest quest = SlashRegistry.Quests().getWrapped().random();
+        Quest quest = SlashRegistry.Quests()
+            .getWrapped()
+            .random();
 
         data.questGUID = quest.GUID();
 
@@ -77,7 +81,10 @@ public class MapBlueprint extends ItemBlueprint {
 
         data.isPermaDeath = getIsPermaDeath();
 
-        data.rewardCrateGUID = SlashRegistry.LootCrates().getWrapped().random().GUID();
+        data.rewardCrateGUID = SlashRegistry.LootCrates()
+            .getWrapped()
+            .random()
+            .GUID();
 
         rollSetupGrouPlay(data, rarity);
 
@@ -85,7 +92,8 @@ public class MapBlueprint extends ItemBlueprint {
 
         genAffixes(data, rarity);
 
-        data.worldGeneratorName = WorldProviders.INSTANCE.random().GUID();
+        data.worldGeneratorName = iwp.get()
+            .GUID();
 
         return data;
     }
@@ -98,12 +106,16 @@ public class MapBlueprint extends ItemBlueprint {
 
         for (int i = 0; i < amount; i++) {
 
-            BaseMapAffix affix = RandomUtils.weightedRandom(SlashRegistry.MapAffixes().getAll().values());
+            BaseMapAffix affix = RandomUtils.weightedRandom(SlashRegistry.MapAffixes()
+                .getAll()
+                .values());
 
             while (affixes.contains(
-                    affix.GUID()) || affix.isBeneficial()) { // can't have moba affixes arndom anymore. only on
+                affix.GUID()) || affix.isBeneficial()) { // can't have moba affixes arndom anymore. only on
                 // dimension types
-                affix = RandomUtils.weightedRandom(SlashRegistry.MapAffixes().getAll().values());
+                affix = RandomUtils.weightedRandom(SlashRegistry.MapAffixes()
+                    .getAll()
+                    .values());
             }
 
             int percent = RandomUtils.RandomRange(rarity.StatPercents().min, rarity.StatPercents().max);
