@@ -270,6 +270,26 @@
 "_comment": " [CATEGORY]: ITEM SETS - NAMES",
 
 
+"_comment": " [CATEGORY]: ADVANCEMENT TITLES - NAMES",
+
+	"mmorpg.advancement.title.addaffix": "Add Affix",
+	"mmorpg.advancement.title.currencybag": "Currency Bag",
+	"mmorpg.advancement.title.factorystation": "Factory Station",
+	"mmorpg.advancement.title.firstadventuremap": "First Adventure Map!",
+	"mmorpg.advancement.title.level": "Level",
+	"mmorpg.advancement.title.levelpenalty": "Level Penalty",
+	"mmorpg.advancement.title.lootbag": "Loot Bag",
+	"mmorpg.advancement.title.mapbag": "Map Bag",
+	"mmorpg.advancement.title.mapdevice": "Map Device",
+	"mmorpg.advancement.title.masterbag": "Master Bag",
+	"mmorpg.advancement.title.modifystation": "Modify Station",
+	"mmorpg.advancement.title.repairstation": "Repair Station",
+	"mmorpg.advancement.title.salvagestation": "Salvage Station",
+	"mmorpg.advancement.title.welcomemineandslash": "Welcome to Mine and Slash!",
+
+"_comment": " [CATEGORY]: ADVANCEMENT TITLES - NAMES",
+
+
 "_comment": " [CATEGORY]: LOOTBOXES - NAMES",
 
 	"item.mmorpg.lootbox.big_currency_lootbox_3": "§9Epic Big Currency Treasure Box",
@@ -292,26 +312,6 @@
 	"item.mmorpg.lootbox.small_gear_lootbox_5": "§dMythical Small Gear Treasure Box",
 
 "_comment": " [CATEGORY]: LOOTBOXES - NAMES",
-
-
-"_comment": " [CATEGORY]: ADVANCEMENT TITLES - NAMES",
-
-	"mmorpg.advancement.title.addaffix": "Add Affix",
-	"mmorpg.advancement.title.currencybag": "Currency Bag",
-	"mmorpg.advancement.title.factorystation": "Factory Station",
-	"mmorpg.advancement.title.firstadventuremap": "First Adventure Map!",
-	"mmorpg.advancement.title.level": "Level",
-	"mmorpg.advancement.title.levelpenalty": "Level Penalty",
-	"mmorpg.advancement.title.lootbag": "Loot Bag",
-	"mmorpg.advancement.title.mapbag": "Map Bag",
-	"mmorpg.advancement.title.mapdevice": "Map Device",
-	"mmorpg.advancement.title.masterbag": "Master Bag",
-	"mmorpg.advancement.title.modifystation": "Modify Station",
-	"mmorpg.advancement.title.repairstation": "Repair Station",
-	"mmorpg.advancement.title.salvagestation": "Salvage Station",
-	"mmorpg.advancement.title.welcomemineandslash": "Welcome to Mine and Slash!",
-
-"_comment": " [CATEGORY]: ADVANCEMENT TITLES - NAMES",
 
 
 "_comment": " [CATEGORY]: RUNE WORDS - NAMES",
@@ -921,6 +921,37 @@
 "_comment": " [CATEGORY]: ADVANCEMENT DESCRIPTIONS - NAMES",
 
 
+"_comment": " [CATEGORY]: GEAR SLOTS - NAMES",
+
+	"mmorpg.gear_type.axe": "Axe",
+	"mmorpg.gear_type.bow": "Bow",
+	"mmorpg.gear_type.bracelet": "Bracelet",
+	"mmorpg.gear_type.charm": "Charm",
+	"mmorpg.gear_type.cloth_boots": "Cloth Slippers",
+	"mmorpg.gear_type.cloth_chest": "Cloth Vest",
+	"mmorpg.gear_type.cloth_helmet": "Cloth Hat",
+	"mmorpg.gear_type.cloth_pants": "Cloth Pants",
+	"mmorpg.gear_type.crossbow": "Crossbow",
+	"mmorpg.gear_type.hammer": "Hammer",
+	"mmorpg.gear_type.leather_boots": "Leather Boots",
+	"mmorpg.gear_type.leather_chest": "Leather Chest",
+	"mmorpg.gear_type.leather_helmet": "Leather Helmet",
+	"mmorpg.gear_type.leather_pants": "Leather Pants",
+	"mmorpg.gear_type.necklace": "Necklace",
+	"mmorpg.gear_type.plate_boots": "Plate Boots",
+	"mmorpg.gear_type.plate_chest": "Plate Chest",
+	"mmorpg.gear_type.plate_helmet": "Plate Helm",
+	"mmorpg.gear_type.plate_pants": "Plate Greaves",
+	"mmorpg.gear_type.ring": "Ring",
+	"mmorpg.gear_type.shield": "Shield",
+	"mmorpg.gear_type.staff": "Staff",
+	"mmorpg.gear_type.sword": "Sword",
+	"mmorpg.gear_type.torch": "Torch",
+	"mmorpg.gear_type.wand": "Staff",
+
+"_comment": " [CATEGORY]: GEAR SLOTS - NAMES",
+
+
 "_comment": " [CATEGORY]: UNIQUE ITEMS - NAMES",
 
 	"item.mmorpg.uniques.axe.axefire0": "§eAxe of Blazing Cuts",
@@ -1014,89 +1045,6 @@
 	"item.mmorpg.uniques.sword.water_ele_saber0": "§eSaber of Frost madness",
 
 "_comment": " [CATEGORY]: UNIQUE ITEMS - NAMES",
-
-
-"_comment": " [CATEGORY]: GEAR SLOTS - NAMES",
-
-	"mmorpg.gear_type.axe": "Axe",
-	"mmorpg.gear_type.bow": "Bow",
-	"mmorpg.gear_type.bracelet": "Bracelet",
-	"mmorpg.gear_type.charm": "Charm",
-	"mmorpg.gear_type.cloth_boots": "Cloth Slippers",
-	"mmorpg.gear_type.cloth_chest": "Cloth Vest",
-	"mmorpg.gear_type.cloth_helmet": "Cloth Hat",
-	"mmorpg.gear_type.cloth_pants": "Cloth Pants",
-	"mmorpg.gear_type.crossbow": "Crossbow",
-	"mmorpg.gear_type.hammer": "Hammer",
-	"mmorpg.gear_type.leather_boots": "Leather Boots",
-	"mmorpg.gear_type.leather_chest": "Leather Chest",
-	"mmorpg.gear_type.leather_helmet": "Leather Helmet",
-	"mmorpg.gear_type.leather_pants": "Leather Pants",
-	"mmorpg.gear_type.necklace": "Necklace",
-	"mmorpg.gear_type.plate_boots": "Plate Boots",
-	"mmorpg.gear_type.plate_chest": "Plate Chest",
-	"mmorpg.gear_type.plate_helmet": "Plate Helm",
-	"mmorpg.gear_type.plate_pants": "Plate Greaves",
-	"mmorpg.gear_type.ring": "Ring",
-	"mmorpg.gear_type.shield": "Shield",
-	"mmorpg.gear_type.staff": "Staff",
-	"mmorpg.gear_type.sword": "Sword",
-	"mmorpg.gear_type.torch": "Torch",
-	"mmorpg.gear_type.wand": "Staff",
-
-"_comment": " [CATEGORY]: GEAR SLOTS - NAMES",
-
-
-"_comment": " [CATEGORY]: POTIONS - NAMES",
-
-	"effect.mmorpg.alchemy.buff.ene_regen.potion_lvl_1": "Alchemy Buff",
-	"effect.mmorpg.alchemy.buff.ene_regen.potion_lvl_10": "Alchemy Buff",
-	"effect.mmorpg.alchemy.buff.ene_regen.potion_lvl_100": "Alchemy Buff",
-	"effect.mmorpg.alchemy.buff.ene_regen.potion_lvl_25": "Alchemy Buff",
-	"effect.mmorpg.alchemy.buff.ene_regen.potion_lvl_50": "Alchemy Buff",
-	"effect.mmorpg.alchemy.buff.ene_regen.potion_lvl_75": "Alchemy Buff",
-	"effect.mmorpg.alchemy.buff.hp_regen.potion_lvl_1": "Alchemy Buff",
-	"effect.mmorpg.alchemy.buff.hp_regen.potion_lvl_10": "Alchemy Buff",
-	"effect.mmorpg.alchemy.buff.hp_regen.potion_lvl_100": "Alchemy Buff",
-	"effect.mmorpg.alchemy.buff.hp_regen.potion_lvl_25": "Alchemy Buff",
-	"effect.mmorpg.alchemy.buff.hp_regen.potion_lvl_50": "Alchemy Buff",
-	"effect.mmorpg.alchemy.buff.hp_regen.potion_lvl_75": "Alchemy Buff",
-	"effect.mmorpg.alchemy.buff.loot_bonus.potion_lvl_1": "Alchemy Buff",
-	"effect.mmorpg.alchemy.buff.loot_bonus.potion_lvl_10": "Alchemy Buff",
-	"effect.mmorpg.alchemy.buff.loot_bonus.potion_lvl_100": "Alchemy Buff",
-	"effect.mmorpg.alchemy.buff.loot_bonus.potion_lvl_25": "Alchemy Buff",
-	"effect.mmorpg.alchemy.buff.loot_bonus.potion_lvl_50": "Alchemy Buff",
-	"effect.mmorpg.alchemy.buff.loot_bonus.potion_lvl_75": "Alchemy Buff",
-	"effect.mmorpg.alchemy.buff.mana_regen.potion_lvl_1": "Alchemy Buff",
-	"effect.mmorpg.alchemy.buff.mana_regen.potion_lvl_10": "Alchemy Buff",
-	"effect.mmorpg.alchemy.buff.mana_regen.potion_lvl_100": "Alchemy Buff",
-	"effect.mmorpg.alchemy.buff.mana_regen.potion_lvl_25": "Alchemy Buff",
-	"effect.mmorpg.alchemy.buff.mana_regen.potion_lvl_50": "Alchemy Buff",
-	"effect.mmorpg.alchemy.buff.mana_regen.potion_lvl_75": "Alchemy Buff",
-	"effect.mmorpg.blazing_inferno": "Blazing Inferno",
-	"effect.mmorpg.bleed": "Bleed",
-	"effect.mmorpg.burn": "Burn",
-	"effect.mmorpg.cleanse_poison": "Cleanse Poison",
-	"effect.mmorpg.divine_shield": "Divine Shield",
-	"effect.mmorpg.frost": "Frost",
-	"effect.mmorpg.frost_essence": "Frost Essence",
-	"effect.mmorpg.hunter_instinct": "Hunter Instinct",
-	"effect.mmorpg.imbue": "Imbue",
-	"effect.mmorpg.major_thorns": "Major Thorns",
-	"effect.mmorpg.minor_thorns": "Minor Thorns",
-	"effect.mmorpg.petrify": "Petrify",
-	"effect.mmorpg.poisoned_weapons": "Poisoned Weapons",
-	"effect.mmorpg.righteous_fury": "Righteous Fury",
-	"effect.mmorpg.self_regen": "Regenerate",
-	"effect.mmorpg.shiver": "Shiver",
-	"effect.mmorpg.static": "Static",
-	"effect.mmorpg.stealth": "Stealth",
-	"effect.mmorpg.teleport_protection": "Teleport Guard",
-	"effect.mmorpg.thorn_armor": "Thorn Armor",
-	"effect.mmorpg.thunder_essence": "Thunder Essence",
-	"effect.mmorpg.wounds": "Wounds",
-
-"_comment": " [CATEGORY]: POTIONS - NAMES",
 
 
 "_comment": " [CATEGORY]: GEAR ITEMS - NAMES",
@@ -1253,6 +1201,58 @@
 	"item.mmorpg.wand.wand5": "§dWand",
 
 "_comment": " [CATEGORY]: GEAR ITEMS - NAMES",
+
+
+"_comment": " [CATEGORY]: POTIONS - NAMES",
+
+	"effect.mmorpg.alchemy.buff.ene_regen.potion_lvl_1": "Alchemy Buff",
+	"effect.mmorpg.alchemy.buff.ene_regen.potion_lvl_10": "Alchemy Buff",
+	"effect.mmorpg.alchemy.buff.ene_regen.potion_lvl_100": "Alchemy Buff",
+	"effect.mmorpg.alchemy.buff.ene_regen.potion_lvl_25": "Alchemy Buff",
+	"effect.mmorpg.alchemy.buff.ene_regen.potion_lvl_50": "Alchemy Buff",
+	"effect.mmorpg.alchemy.buff.ene_regen.potion_lvl_75": "Alchemy Buff",
+	"effect.mmorpg.alchemy.buff.hp_regen.potion_lvl_1": "Alchemy Buff",
+	"effect.mmorpg.alchemy.buff.hp_regen.potion_lvl_10": "Alchemy Buff",
+	"effect.mmorpg.alchemy.buff.hp_regen.potion_lvl_100": "Alchemy Buff",
+	"effect.mmorpg.alchemy.buff.hp_regen.potion_lvl_25": "Alchemy Buff",
+	"effect.mmorpg.alchemy.buff.hp_regen.potion_lvl_50": "Alchemy Buff",
+	"effect.mmorpg.alchemy.buff.hp_regen.potion_lvl_75": "Alchemy Buff",
+	"effect.mmorpg.alchemy.buff.loot_bonus.potion_lvl_1": "Alchemy Buff",
+	"effect.mmorpg.alchemy.buff.loot_bonus.potion_lvl_10": "Alchemy Buff",
+	"effect.mmorpg.alchemy.buff.loot_bonus.potion_lvl_100": "Alchemy Buff",
+	"effect.mmorpg.alchemy.buff.loot_bonus.potion_lvl_25": "Alchemy Buff",
+	"effect.mmorpg.alchemy.buff.loot_bonus.potion_lvl_50": "Alchemy Buff",
+	"effect.mmorpg.alchemy.buff.loot_bonus.potion_lvl_75": "Alchemy Buff",
+	"effect.mmorpg.alchemy.buff.mana_regen.potion_lvl_1": "Alchemy Buff",
+	"effect.mmorpg.alchemy.buff.mana_regen.potion_lvl_10": "Alchemy Buff",
+	"effect.mmorpg.alchemy.buff.mana_regen.potion_lvl_100": "Alchemy Buff",
+	"effect.mmorpg.alchemy.buff.mana_regen.potion_lvl_25": "Alchemy Buff",
+	"effect.mmorpg.alchemy.buff.mana_regen.potion_lvl_50": "Alchemy Buff",
+	"effect.mmorpg.alchemy.buff.mana_regen.potion_lvl_75": "Alchemy Buff",
+	"effect.mmorpg.blazing_inferno": "Blazing Inferno",
+	"effect.mmorpg.bleed": "Bleed",
+	"effect.mmorpg.burn": "Burn",
+	"effect.mmorpg.cleanse_poison": "Cleanse Poison",
+	"effect.mmorpg.divine_shield": "Divine Shield",
+	"effect.mmorpg.frost": "Frost",
+	"effect.mmorpg.frost_essence": "Frost Essence",
+	"effect.mmorpg.hunter_instinct": "Hunter Instinct",
+	"effect.mmorpg.imbue": "Imbue",
+	"effect.mmorpg.major_thorns": "Major Thorns",
+	"effect.mmorpg.minor_thorns": "Minor Thorns",
+	"effect.mmorpg.petrify": "Petrify",
+	"effect.mmorpg.poisoned_weapons": "Poisoned Weapons",
+	"effect.mmorpg.righteous_fury": "Righteous Fury",
+	"effect.mmorpg.self_regen": "Regenerate",
+	"effect.mmorpg.shiver": "Shiver",
+	"effect.mmorpg.static": "Static",
+	"effect.mmorpg.stealth": "Stealth",
+	"effect.mmorpg.teleport_protection": "Teleport Guard",
+	"effect.mmorpg.thorn_armor": "Thorn Armor",
+	"effect.mmorpg.thunder_essence": "Thunder Essence",
+	"effect.mmorpg.wounds": "Wounds",
+
+"_comment": " [CATEGORY]: POTIONS - NAMES",
 
 
 "_comment": " [CATEGORY]: WORLD TYPES - NAMES",
