@@ -40,6 +40,7 @@ other minecraft things in the meantime.
 * grouped all my commands under /slash
 This should make using commands a lot easier
 * added simple party system, untested. /slash party. For now it should disable friendly fire
+* added /slash generate compatible_items modid. To auto generate large amounts of compatible item files with default values. Should save some time.
 
 3.0.10
 * buffed rarity drops default config (needs config reset)
